# renum

./: .gitignore  pyproject.toml
renum/: _renamer.py  cli.py
tests/: test_renamer.py  test_renum.py
